--- a/.github/workflows/HerokuRelease.yml
+++ b/.github/workflows/HerokuRelease.yml
@@ -1,9 +1,9 @@
- #Your workflow name.
+# Your workflow name.
 name: Deploy to heroku.
 # Run workflow on every push to master branch.
 on:
   push:
-    branches: [master]
+    branches: [main]
 # Your workflows jobs.
 jobs:
   build:
@@ -12,6 +12,16 @@ jobs:
       # Check-out your repository.
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 5.0
+      # dotnet build and publish
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
+      - name: dotnet publish
+        run: |
+          dotnet publish -c Release 
 ### ⬇ IMPORTANT PART ⬇ ###
       - name: Build, Push and Release a Docker container to Heroku.
         uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
@@ -26,5 +36,5 @@ jobs:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           # Name of the heroku application to which the build is to be sent.
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-          dockerfile_directory: ./
+          dockerfile_directory: ./server
 ### ⬆ IMPORTANT PART ⬆ ###
