--- a/keeprserver/appsettings.json
+++ b/keeprserver/appsettings.json
@@ -7,12 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "DB": {
-    "gearhost": "server=den1.mysql3.gear.host;port=3306;database=burgershack6691;user id=burgershack6691;password=Wj2y3yV!q_5V"
-  },
-  "Auth0": {
-    "Domain": "dev-ln68jdeh.us.auth0.com",
-    "Audience": "https://project-api.com",
-    "CLIENT_ID": "q3fj1SQINsvTbUOs2SL70lrjbSMr7qmj"
-  }
+  "CONNECTION_STRING": "",
+  "AUTH0_DOMAIN": "",
+  "AUTH0_AUDIENCE": ""
 }
