--- a/keeprserver/appsettings.json
+++ b/keeprserver/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "CONNECTION_STRING": "",
   "AUTH0_DOMAIN": "",
-  "AUTH0_AUDIENCE": ""
+  "AUTH0_AUDIENCE": "",
+  "CONNECTION_STRING": ""
 }
